# SURL

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: integration.yaml  integration.yml  update-diagram.yml
architecture/: pyproject.toml
architecture/architecture/: containers-diagram.py  system-context-diagram.py
backend/api-gateway/: README.md  docker-compose.yml  pyproject.toml
backend/api-gateway/src/: main.py
backend/api-gateway/src/api/mutations/: create_shortened_link.py
backend/api-gateway/src/api/repositories/: broker_repository.py
backend/api-gateway/src/api/routes/: redirect_routes.py
backend/api-gateway/src/api/schemas/: shortened_link.py
backend/api-gateway/src/api/services/shortener/: queries.py  resolvers.py
backend/api-gateway/src/api_gateway/repositories/: cache.repository.py
backend/api-gateway/src/repositories/: broker_repository.py  database_repository.py
backend/api_gateway/: README.md  pyproject.toml
backend/api_gateway/src/: main.py
backend/api_gateway/src/app/routes/: redirect_routes.py
backend/api_gateway/src/app/services/shortener/: resolvers.py  types.py
docker/: api-gateway.Dockerfile
docker/compose/: docker-compose.yml
