[project]
name = "api-gateway"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "neojelll", email = "timofejmitusin60892@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "fastapi>=0.115.8",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.38",
    "strawberry-graphql[debug-server]>=0.258.0",
]

[project.scripts]
api-gateway = "api_gateway:main.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
